--- a/style.css
+++ b/style.css
@@ -8,12 +8,42 @@ html {
 	font-size: 62.5%;
 }
 
-header {
-	height: 100vh;
+header,
+section {
+	height: 500px;
 }
 
 h1 {
 	font-size: 5rem;
+}
+
+header {
+	padding: 50px;
+}
+
+.nav {
+	overflow: hidden;
+	background-color: #333;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+nav ul {
+	display: flex;
+}
+.nav a {
+	float: left;
+	color: #f2f2f2;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	font-size: 17px;
+}
+
+.nav a:hover {
+	background-color: tomato;
+	color: black;
 }
 
 .half-width {
@@ -41,13 +71,143 @@ section.about {
 	background-image: url(./images/shapes/7.png);
 	background-repeat: no-repeat;
 	background-size: cover;
-	height: 100vh;
 }
 
-section.recipe {
-	height: 100vh;
+.about-img {
+	border-radius: 50%;
 }
 
-.recipe-cards {
-	display: inline-block;
+.about-text {
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	border: 1px solid red;
+	padding: 50px;
+}
+
+.about-text h3 {
+	font-size: 4.5rem;
+	color: tomato;
+	margin-bottom: 50px;
+}
+
+.about-text p {
+	font-size: 1.7rem;
+	letter-spacing: 1px;
+	margin-bottom: 50px;
+}
+
+.recipe {
+	border: 5px solid red;
+	height: 700px;
+}
+
+.recipe-text {
+	text-align: center;
+	padding: 50px;
+}
+
+.recipe-text p {
+	font-size: 1.5rem;
+	margin-top: 5px;
+}
+
+.cards {
+	display: flex;
+	justify-content: center;
+}
+
+.card {
+	width: 350px;
+	height: 420px;
+	padding: 20px;
+	margin: 40px;
+	border-radius: 20px;
+	box-shadow: 5px 10px 18px #888888;
+}
+
+.card img {
+	width: 100%;
+	height: 50%;
+	border-radius: 10px;
+}
+
+.card-body h3 {
+	font-size: 2.5rem;
+	margin-top: 10px;
+}
+
+.card-body p {
+	font-size: 2rem;
+	margin-top: 5px;
+}
+
+.icon-bar {
+	position: fixed;
+	top: 50%;
+	-webkit-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	transform: translateY(-50%);
+}
+
+.icon-bar a {
+	display: block;
+	text-align: center;
+	padding: 16px;
+	transition: all 0.3s ease;
+	color: white;
+	font-size: 20px;
+}
+
+.facebook {
+	background: #3b5998;
+	color: rgb(36, 5, 5);
+}
+
+.twitter {
+	background: #55acee;
+	color: rgb(32, 1, 1);
+}
+
+.google {
+	background: #dd4b39;
+	color: rgb(41, 4, 4);
+}
+
+.linkedin {
+	background: #007bb5;
+	color: rgb(0, 0, 0);
+}
+
+.youtube {
+	background: #bb0000;
+	color: rgb(34, 4, 4);
+}
+
+.social-media {
+	position: relative;
+	height: 200px;
+	border: none;
+	border-radius: 10px;
+	margin: 100px;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	box-shadow: 5px 10px 18px #888888;
+}
+
+.social-media > div {
+	margin: 10px 40px;
+}
+
+.social-media > div > h3 {
+	font-size: 5rem;
+}
+
+.social-media > div > p {
+	font-size: 2rem;
+	letter-spacing: 1px;
 }
