--- a/style.css
+++ b/style.css
@@ -8,17 +8,20 @@ html {
 	font-size: 62.5%;
 }
 
-header,
+header {
+	height: 700px;
+}
 section {
 	height: 500px;
 }
 
 h1 {
-	font-size: 5rem;
+	font-size: 6rem;
 }
 
 header {
 	padding: 50px;
+	display: flex;
 }
 
 .nav {
@@ -47,9 +50,12 @@ nav ul {
 }
 
 .half-width {
-	width: 50%;
-	float: left;
 	padding-left: 10%;
+	display: flex;
+	width: 50%;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
 }
 
 .half-width img {
@@ -71,6 +77,7 @@ section.about {
 	background-image: url(./images/shapes/7.png);
 	background-repeat: no-repeat;
 	background-size: cover;
+	display: flex;
 }
 
 .about-img {
@@ -209,5 +216,28 @@ section.about {
 
 .social-media > div > p {
 	font-size: 2rem;
+	letter-spacing: 1px;
+}
+
+footer {
+	background: rgb(26, 25, 25);
+	height: 200px;
+	display: flex;
+	justify-content: center;
+	text-align: center;
+	align-items: center;
+	flex-direction: column;
+}
+
+footer span {
+	color: tomato;
+}
+footer h2 {
+	font-size: 4rem;
+}
+
+footer p {
+	color: #fff;
+	font-size: 1.5rem;
 	letter-spacing: 1px;
 }
